[gd_scene load_steps=11 format=3 uid="uid://casuh6yhfe2oe"]

[ext_resource type="Script" path="res://managers/background_manager.gd" id="1_mwciq"]
[ext_resource type="Texture2D" uid="uid://8ryi1bg3tvke" path="res://images/mattepainting_N.png" id="1_wlf2r"]
[ext_resource type="Texture2D" uid="uid://cth8rj1qu7iv2" path="res://images/Preview001a-1920x1080-feb3d2c1960d9ef2b9d3f5cbec3d6704.webp" id="2_7cl71"]
[ext_resource type="Texture2D" uid="uid://bf2g4f7oxl3jh" path="res://images/public.png" id="3_3moqh"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pv3bx"]
albedo_texture = ExtResource("1_wlf2r")

[sub_resource type="QuadMesh" id="QuadMesh_pt5tj"]
material = SubResource("StandardMaterial3D_pv3bx")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_m0urr"]
albedo_texture = ExtResource("2_7cl71")

[sub_resource type="QuadMesh" id="QuadMesh_0yq2s"]
material = SubResource("StandardMaterial3D_m0urr")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_go0w6"]
albedo_texture = ExtResource("3_3moqh")

[sub_resource type="QuadMesh" id="QuadMesh_pfmet"]
material = SubResource("StandardMaterial3D_go0w6")

[node name="BackgroundManager" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -38.0663)
script = ExtResource("1_mwciq")
layer_2_move_mult = Vector3(0.001, 0.001, 0)
layer_3_move_mult = Vector3(0.005, 0.005, 0)

[node name="Background1" type="MeshInstance3D" parent="."]
transform = Transform3D(1000, 0, 0, 0, 1000, 0, 0, 0, 1000, 0, 50.3033, -68.0458)
mesh = SubResource("QuadMesh_pt5tj")

[node name="Background2" type="MeshInstance3D" parent="."]
transform = Transform3D(750, 0, 0, 0, 750, 0, 0, 0, 750, 5.06842, -352.51, -18.5645)
mesh = SubResource("QuadMesh_0yq2s")
skeleton = NodePath("../Background1")

[node name="Background3" type="MeshInstance3D" parent="."]
transform = Transform3D(500, 0, 0, 0, 500, 0, 0, 0, 500, 0, -249.929, 0)
mesh = SubResource("QuadMesh_pfmet")
skeleton = NodePath("../Background2")
